# superset_embedded

./: README.md  main.py  pyproject.toml  requirements.txt  superset.py
templates/: index.html
