[tool.poetry]
name = "embedded-superset"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
